[package]
name = "webrtc-client-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.9"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
cocoa = "0.25"
objc = "0.2"
tokio-tungstenite = "0.20"
uuid = { version = "1.4", features = ["v4"] }
parking_lot = "0.12"
once_cell = "1.8"
